Fix Play amount text would go out of box on desktop problme

--- a/src/style/dice.less
+++ b/src/style/dice.less
@@ -671,6 +671,9 @@
                     width: 100%;
 
                     @media @desktop {
+                        font-size: 1.3em;
+                    }
+                    @media @xl {
                         font-size: 1.4em;
                     }
 
